@@ -126,6 +126,42 @@ Defaults to Nominal.
 Defaults to Critical.
 .RE
 .TP
+.B IPMI_Temperature_Transition_Severity
+The following states correspond to Temperature sensors that report on
+device severity.
+.RS
+.TP
+\fBIPMI_Temperature_Transition_Severity_No_Event\fR
+Defaults to Nominal.
+.TP
+\fBIPMI_Temperature_Transition_Severity_Transition_To_OK\fR
+Defaults to Nominal.
+.TP
+\fBIPMI_Temperature_Transition_Severity_Transition_To_Non_Critical_From_OK\fR
+Defaults to Warning.
+.TP
+\fBIPMI_Temperature_Transition_Severity_Transition_To_Critical_From_Less_Severe\fR
+Defaults to Critical.
+.TP
+\fBIPMI_Temperature_Transition_Severity_Transition_To_Non_Recoverable_From_Less_Severe\fR
+Defaults to Critical.
+.TP
+\fBIPMI_Temperature_Transition_Severity_Transition_To_Non_Critical_From_More_Severe\fR
+Defaults to Warning.
+.TP
+\fBIPMI_Temperature_Transition_Severity_Transition_To_Critical_From_Non_Recoverable\fR
+Defaults to Critical.
+.TP
+\fBIPMI_Temperature_Transition_Severity_Transition_To_Non_Recoverable\fR
+Defaults to Critical.
+.TP
+\fBIPMI_Temperature_Transition_Severity_Monitor\fR
+Defaults to Warning.
+.TP
+\fBIPMI_Temperature_Transition_Severity_Informational\fR
+Defaults to Nominal.
+.RE
+.TP
 .B IPMI_Voltage_State
 The following states correspond to Voltage sensors that report an
 assertion or deassertion.
@@ -156,6 +192,78 @@ Defaults to Nominal.
 Defaults to Critical.
 .RE
 .TP
+.B IPMI_Voltage_Transition_Severity
+The following states correspond to Voltage sensors that report on
+device severity.
+.RS
+.TP
+\fBIPMI_Voltage_Transition_Severity_No_Event\fR
+Defaults to Nominal.
+.TP
+\fBIPMI_Voltage_Transition_Severity_Transition_To_OK\fR
+Defaults to Nominal.
+.TP
+\fBIPMI_Voltage_Transition_Severity_Transition_To_Non_Critical_From_OK\fR
+Defaults to Warning.
+.TP
+\fBIPMI_Voltage_Transition_Severity_Transition_To_Critical_From_Less_Severe\fR
+Defaults to Critical.
+.TP
+\fBIPMI_Voltage_Transition_Severity_Transition_To_Non_Recoverable_From_Less_Severe\fR
+Defaults to Critical.
+.TP
+\fBIPMI_Voltage_Transition_Severity_Transition_To_Non_Critical_From_More_Severe\fR
+Defaults to Warning.
+.TP
+\fBIPMI_Voltage_Transition_Severity_Transition_To_Critical_From_Non_Recoverable\fR
+Defaults to Critical.
+.TP
+\fBIPMI_Voltage_Transition_Severity_Transition_To_Non_Recoverable\fR
+Defaults to Critical.
+.TP
+\fBIPMI_Voltage_Transition_Severity_Monitor\fR
+Defaults to Warning.
+.TP
+\fBIPMI_Voltage_Transition_Severity_Informational\fR
+Defaults to Nominal.
+.RE
+.TP
+.B IPMI_Fan_Transition_Severity
+The following states correspond to Fan sensors that report on
+device severity.
+.RS
+.TP
+\fBIPMI_Fan_Transition_Severity_No_Event\fR
+Defaults to Nominal.
+.TP
+\fBIPMI_Fan_Transition_Severity_Transition_To_OK\fR
+Defaults to Nominal.
+.TP
+\fBIPMI_Fan_Transition_Severity_Transition_To_Non_Critical_From_OK\fR
+Defaults to Warning.
+.TP
+\fBIPMI_Fan_Transition_Severity_Transition_To_Critical_From_Less_Severe\fR
+Defaults to Critical.
+.TP
+\fBIPMI_Fan_Transition_Severity_Transition_To_Non_Recoverable_From_Less_Severe\fR
+Defaults to Critical.
+.TP
+\fBIPMI_Fan_Transition_Severity_Transition_To_Non_Critical_From_More_Severe\fR
+Defaults to Warning.
+.TP
+\fBIPMI_Fan_Transition_Severity_Transition_To_Critical_From_Non_Recoverable\fR
+Defaults to Critical.
+.TP
+\fBIPMI_Fan_Transition_Severity_Transition_To_Non_Recoverable\fR
+Defaults to Critical.
+.TP
+\fBIPMI_Fan_Transition_Severity_Monitor\fR
+Defaults to Warning.
+.TP
+\fBIPMI_Fan_Transition_Severity_Informational\fR
+Defaults to Nominal.
+.RE
+.TP
 .B IPMI_Fan_Device_Present
 The following states correspond to Fan sensors that report on
 device installation.
@@ -168,6 +276,42 @@ Defaults to Nominal.
 Defaults to Critical.
 .TP
 \fBIPMI_Fan_Device_Present_Device_Inserted_Device_Present\fR
+Defaults to Nominal.
+.RE
+.TP
+.B IPMI_Power_Supply_Transition_Severity
+The following states correspond to Power Supply sensors that report on
+device severity.
+.RS
+.TP
+\fBIPMI_Power_Supply_Transition_Severity_No_Event\fR
+Defaults to Nominal.
+.TP
+\fBIPMI_Power_Supply_Transition_Severity_Transition_To_OK\fR
+Defaults to Nominal.
+.TP
+\fBIPMI_Power_Supply_Transition_Severity_Transition_To_Non_Critical_From_OK\fR
+Defaults to Warning.
+.TP
+\fBIPMI_Power_Supply_Transition_Severity_Transition_To_Critical_From_Less_Severe\fR
+Defaults to Critical.
+.TP
+\fBIPMI_Power_Supply_Transition_Severity_Transition_To_Non_Recoverable_From_Less_Severe\fR
+Defaults to Critical.
+.TP
+\fBIPMI_Power_Supply_Transition_Severity_Transition_To_Non_Critical_From_More_Severe\fR
+Defaults to Warning.
+.TP
+\fBIPMI_Power_Supply_Transition_Severity_Transition_To_Critical_From_Non_Recoverable\fR
+Defaults to Critical.
+.TP
+\fBIPMI_Power_Supply_Transition_Severity_Transition_To_Non_Recoverable\fR
+Defaults to Critical.
+.TP
+\fBIPMI_Power_Supply_Transition_Severity_Monitor\fR
+Defaults to Warning.
+.TP
+\fBIPMI_Power_Supply_Transition_Severity_Informational\fR
 Defaults to Nominal.
 .RE
 .TP
@@ -516,6 +660,39 @@ Defaults to Critical.
 Defaults to Warning.
 .TP
 \fBIPMI_Power_Unit_Redundancy_Redundancy_Degraded_From_Non_Redundant\fR
+Defaults to Warning.
+.RE
+.TP
+.B IPMI_Cooling_Device_Redundancy
+The following states correspond to Cooling Device sensors that report on
+redundancy.
+.RS
+.TP
+\fBIPMI_Cooling_Device_Redundancy_No_Event\fR
+Defaults to Nominal.
+.TP
+\fBIPMI_Cooling_Device_Redundancy_Fully_Redundant\fR
+Defaults to Nominal.
+.TP
+\fBIPMI_Cooling_Device_Redundancy_Redundancy_Lost\fR
+Defaults to Critical.
+.TP
+\fBIPMI_Cooling_Device_Redundancy_Redundancy_Degraded\fR
+Defaults to Warning.
+.TP
+\fBIPMI_Cooling_Device_Redundancy_Non_Redundant_Sufficient_Resources_From_Redundant\fR
+Defaults to Critical.
+.TP
+\fBIPMI_Cooling_Device_Redundancy_Non_Redundant_Sufficient_Resources_From_Insufficient_Redundancy\fR
+Defaults to Critical.
+.TP
+\fBIPMI_Cooling_Device_Redundancy_Non_Redundant_Insufficient_Resources\fR
+Defaults to Critical.
+.TP
+\fBIPMI_Cooling_Device_Redundancy_Redundancy_Degraded_From_Fully_Redundant\fR
+Defaults to Warning.
+.TP
+\fBIPMI_Cooling_Device_Redundancy_Redundancy_Degraded_From_Non_Redundant\fR
 Defaults to Warning.
 .RE
 .TP
